syntax = "proto3";

package com.epam.stubs.message;

option java_package="com.epam.stubs.message";
option java_multiple_files = true;

service PingService {
    rpc getPong(PingRequest) returns (PongResponse);
}

message PingRequest {
    string message = 1;
}

message PongResponse {
    string message = 1;
    int32 count = 2;
}